--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-plugin": "^1.0.11",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.2"
+    "eslint-plugin-import": "^2.25.2",
+    "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "express": "^4.17.3"
   }
 }
